# Learn-OpenGL

./: CMakeLists.txt  PreLoad.cmake
CMake/glfw3/: glfw3Targets.cmake
include/glad/: gl.h
src/: main.c
